# unixbar

./: Cargo.toml  README.md  build.rs
examples/: demo.rs
src/: lib.rs
src/format/: data.rs  dzen2.rs  i3bar.rs  lemonbar.rs  mod.rs
src/widget/: alsa.rs  base.rs  bspwm.rs  datetime.rs  delayed.rs  mod.rs  mpd.rs  periodic.rs  text.rs  wrap.rs  xkb.rs
src/widget/music/: mod.rs  mpd.rs  mpris.rs
src/widget/volume/: alsa.rs  freebsd.rs  mod.rs
