[package]
name = "unixbar"
version = "0.1.2"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Desktop", "X11" ]
description = "unixbar"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/unixbar"
repository = "https://github.com/myfreeweb/unixbar"
build = "build.rs"

[features]
default = ["systemstat", "xkb", "unix_alsa"]
xkb = ["xcb", "pkg-config"]
unix_alsa = ["alsa", "libc"]

[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[dependencies]
chrono = "0.2"
nom = "2.0"
systemstat = { version = "0", optional = true }
xcb = { version = "0.8", features = ["xkb"], optional = true }
serde = "0.8"
serde_json = "0.8"
alsa = { version = "0.1.10", optional = true }
libc = { version = "0.2.29", optional = true }

[patch.crates-io]
systemstat = { git = "https://github.com/myfreeweb/systemstat" }
