[package]
name = "unixbar"
version = "0.1.3"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "Desktop", "X11" ]
description = "unixbar"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/unixbar"
repository = "https://github.com/myfreeweb/unixbar"
build = "build.rs"

[features]
default = ["systemstat", "xkb", "dbus"]
xkb = ["xcb", "pkg-config"]

[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[dependencies]
chrono = "0.2"
nom = "3"
systemstat = { version = "0", optional = true }
xcb = { version = "0.8", features = ["xkb"], optional = true }
serde = "1"
serde_json = "1"
serde_derive = "1"
dbus = { version = "0.5", optional = true }
libc = "0.2"
chan = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.1"
